# callmemaybe

./: .flake8  Makefile  README.md  pyproject.toml
data/input/: custom_input1.json
data/output/: output.json
src/: __main__.py  functions.py  generation.py  parsing.py  predict.py  stages.py  validator.py
src/llm_sdk/llm_sdk/: __init__.py
tests/: moulinette_definition.json  test_custom_prompts.py  test_output.py  test_parsing.py  test_prompt.py
