[project]
name = "callmemaybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "llm-sdk",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk-0.1.0-py3-none-any.whl" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.mypy]
python_executable = ".venv/bin/python"
exclude = [
    "src/llm_sdk",
]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_errors = true
follow_imports = "silent"
