[project]
name = "callmemaybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "huggingface-hub>=1.7.2",
    "mypy>=1.19.1",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
	"torch>=2.0.0",
    "regex>=2026.2.28",
    "transformers>=5.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.mypy]
python_executable = ".venv/bin/python"
exclude = [
    "llm_sdk",
]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_errors = true
follow_imports = "silent"
